2008-04-29  Dan Williams  <dcbw@redhat.com>

	* gconf-helpers/gconf-helpers.c
		- (copy_one_setting_value_to_gconf): write the 'name' key to GConf too;
			because of the default-value removal code, and because GConf will
			automatically delete directories that are empty, we need to make
			sure that some directories stick around.  For example, PPPoE
			connections need the PPP setting too, but if it's all default
			values GConf will remove it.

2008-04-27  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-wireless-security.c
		- (validate): unencrypted method doesn't have a security object so
			NULL here means valid

	* src/connection-editor/nm-connection-list.c
		- (create_new_connection_for_type): set default wireless mode

	* src/connection-editor/page-ip4.c
		- (cell_edited, ce_page_ip4_new): trigger validation when IP addresses
			change too

2008-04-27  Dan Williams  <dcbw@redhat.com>

	* src/utils/utils.c
	  src/utils/utils.h
		- (utils_ether_ntop, utils_mac_valid): new functions

	* src/connection-editor/ce-page.c
	  src/connection-editor/ce-page.h
		- (ce_page_mac_to_entry, ce_page_entry_to_mac): new functions

	* src/connection-editor/ce-page-wireless.glade
	  src/connection-editor/page-wireless.c
		- Hook up BSSID and MAC address entries
		- Hide widgets for settings NM doesn't yet support

	* src/connection-editor/ce-page-wired.glade
	  src/connection-editor/page-wired.c
		- Hook up MAC address entry
		- Hide widgets for settings NM doesn't yet support

2008-04-24  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-peap.c
		- (eap_method_peap_new): fix population of anonymous identity

	* src/wireless-security/eap-method-ttls.c
		- (inner_auth_combo_init): populate phase2 auth method correctly
		- (eap_method_ttls_new): fix population of anonymous identity

2008-04-22  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (copy_one_setting_value_to_gconf): clear out values from gconf that