@@ -171,6 +171,9 @@ security_combo_changed (GtkWidget *combo,
 
 			gtk_container_add (GTK_CONTAINER (vbox), sec_widget);
 			wireless_security_unref (sec);
+
+			/* Re-validate */
+			wireless_security_changed_cb (NULL, sec);
 		}
 	} else {
 		g_warning ("%s: no active security combo box item.", __func__);
@@ -474,12 +477,16 @@ security_combo_init (const char *glade_file,
 	if (   nm_utils_security_valid (NMU_SEC_STATIC_WEP, dev_caps, !!cur_ap, is_adhoc, ap_flags, ap_wpa, ap_rsn)
 	    && ((!ap_wpa && !ap_rsn) || !(dev_caps & (NM_802_11_DEVICE_CAP_WPA | NM_802_11_DEVICE_CAP_RSN)))) {
 		WirelessSecurityWEPKey *ws_wep;
+		WEPKeyType default_wep_type = WEP_KEY_TYPE_PASSPHRASE;
+
+		if (default_type == NMU_SEC_STATIC_WEP)
+			default_wep_type = ws_wep_guess_key_type (connection, connection_id);
 
 		ws_wep = ws_wep_key_new (glade_file, connection, connection_id, WEP_KEY_TYPE_PASSPHRASE);
 		if (ws_wep) {
 			add_security_item (dialog, WIRELESS_SECURITY (ws_wep), sec_model,
 			                   &iter, _("WEP 128-bit Passphrase"));
-			if ((active < 0) && (default_type == NMU_SEC_STATIC_WEP))
+			if ((active < 0) && (default_type == NMU_SEC_STATIC_WEP) && (default_wep_type == WEP_KEY_TYPE_PASSPHRASE))
 				active = item;
 			item++;
 		}
@@ -488,7 +495,7 @@ security_combo_init (const char *glade_file,
 		if (ws_wep) {
 			add_security_item (dialog, WIRELESS_SECURITY (ws_wep), sec_model,
 			                   &iter, _("WEP 40/128-bit Hexadecimal"));
-			if ((active < 0) && (default_type == NMU_SEC_STATIC_WEP))
+			if ((active < 0) && (default_type == NMU_SEC_STATIC_WEP) && (default_wep_type == WEP_KEY_TYPE_HEX))
 				active = item;
 			item++;
 		}
@@ -497,7 +504,7 @@ security_combo_init (const char *glade_file,
 		if (ws_wep) {
 			add_security_item (dialog, WIRELESS_SECURITY (ws_wep), sec_model,
 			                   &iter, _("WEP 40/128-bit ASCII"));
-			if ((active < 0) && (default_type == NMU_SEC_STATIC_WEP))
+			if ((active < 0) && (default_type == NMU_SEC_STATIC_WEP) && (default_wep_type == WEP_KEY_TYPE_ASCII))
 				active = item;
 			item++;
 		}
