@@ -1,3 +1,10 @@
+2008-04-30  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-dialog.c
+		- (security_combo_changed): re-validate when security combo changes
+		- (security_combo_init): guess WEP key type and select the right option
+			in the security combo
+
 2008-04-29  Dan Williams  <dcbw@redhat.com>
 
 	* gconf-helpers/gconf-helpers.c
